--- a/app/less/vacancy/_sidebar.less
+++ b/app/less/vacancy/_sidebar.less
@@ -1,3 +1,33 @@
+.vacancy-sidebar {
+	.sidebar__filters {
+		height: 214/1000 * 100vh;
+		min-height: 214px;
+	}
+
+	.sidebar__stats {
+		height: 447/1000 * 100vh;
+	}
+
+	.sidebar__statuses {
+		height: 58/1000 * 100vh;
+		min-height: 58px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.sidebar__info {
+		height: 85/1000 * 100vh;
+		min-height: 85px;
+	}
+
+	.sidebar__lists {
+		height: 150/1000 * 100vh;
+		min-height: 150px;
+	}
+}
+
+
 .sidebar__statuses {
 	padding: 	20px 0;
 	width: 	100%;
