--- a/app/pug/layouts/vacancy/sidebar.pug
+++ b/app/pug/layouts/vacancy/sidebar.pug
@@ -90,9 +90,12 @@
 								|Распечатать отчет
 		.sidebar__wrapper
 			.sidebar__info
-				p.sidebar__choosed
-					| Отобрано: 
-					span 56
+				p.sidebar__needed
+					|Требуется работников: 
+					span 12
 				p.sidebar__full-number
-					| Общее количество: 
-					span 42846
+					|Рабочих мест: 
+					span 56
+				p.sidebar__current
+					|Текущих вакансий: 
+					span 18
