--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -31,7 +31,7 @@ block head-end
 block content
 	main.main
 		
-		.sidebar
+		.sidebar.vacancy-sidebar
 			include pug/layouts/vacancy/sidebar
 		.rows.vacancy-rows
 			.grid
