--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -80,3 +80,93 @@
 					input(type="checkbox" id='managers-chbx')
 					label(for="managers-chbx")
 						|По менеджерам
+		#type-work-popup.sidebar-popup
+			form
+				.form-group
+					fieldset
+						p
+							|Тип работы
+						.input-group.radio-group-type-2.hot
+							.group
+								input(type="checkbox" id="season-chbx" name="vacancies-chbx" checked="true")
+								label(for="season-chbx")
+									|Сезонная
+								input(type="checkbox" id="practice-chbx" name="vacancies-chbx")
+								label(for="practice-chbx")
+									|Практика
+								input(type="checkbox" id="work-chbx" name="vacancies-chbx")
+								label(for="work-chbx")
+									|Рабочая
+				.form-group
+					fieldset
+						p
+							|Тип производства
+						.input-group
+							input(type="checkbox" id="flowers-chbx")
+							label(for="flowers-chbx")
+								|цветы
+						.input-group
+							input(type="checkbox" id="vegetables-chbx")
+							label(for="vegetables-chbx")
+								|овощи
+						.input-group
+							input(type="checkbox" id="cows-chbx")
+							label(for="cows-chbx")
+								|коровы
+						.input-group
+							input(type="checkbox" id="pigs-chbx")
+							label(for="pigs-chbx")
+								|свиньи
+						.input-group
+							input(type="checkbox" id="fields-chbx")
+							label(for="fields-chbx")
+								|поля
+					fieldset
+						.input-group
+							input(type="checkbox" id="berries-chbx")
+							label(for="berries-chbx")
+								|ягоды
+						.input-group
+							input(type="checkbox" id="greenhouses-chbx")
+							label(for="greenhouses-chbx")
+								|теплицы
+						.input-group
+							input(type="checkbox" id="wood-chbx")
+							label(for="wood-chbx")
+								|лес
+						.input-group
+							input(type="checkbox" id="landscape-chbx")
+							label(for="landscape-chbx")
+								|ландшафт
+						.input-group
+							input(type="checkbox" id="horses-chbx")
+							label(for="horses-chbx")
+								|лошади
+		#date-terms-popup.sidebar-popup
+			form
+				fieldset
+					p
+						|Дата начала работы
+					.input-group
+						input(type="text" id="before-date-chbx")
+						label(for="before-date-chbx")
+							|до
+					.input-group
+						input(type="text" id="after-date-chbx")
+						label(for="after-date-chbx")
+							|после
+				fieldset
+					p
+						|Срок работы
+					.group
+						.input-group
+							input(type="text" id="from-date-chbx")
+							label(for="from-date-chbx")
+								|от
+						.input-group
+							input(type="text" id="to-date-chbx")
+							label(for="to-date-chbx")
+								|до
+						.input-group
+							p
+								|мес
