--- a/app/pug/layouts/vacancy/archive-row.pug
+++ b/app/pug/layouts/vacancy/archive-row.pug
@@ -1,4 +1,4 @@
-.row.no-open
+.row.no-open.archive-row
 	.f-container
 		.row__terms.row__cell.hot
 		.row__labels-2.row__cell.no-open
@@ -9,13 +9,9 @@
 					|118 - 22
 			span.number-of-people.attention-number.no-open
 					|М12 Ж5
-		.row__indicators.row__cell
-			span.row__indicator.empty
-			span.row__indicator.empty
-			span.row__indicator.empty
-			span.row__indicator.empty
-			span.row__indicator.empty
-			span.row__indicator.empty
+		.row__archive.row__cell
+			p
+				|Архив - 28.10.2019
 		.row__name-2.row__cell.no-open
 			p.row__fullname.no-open
 				|Thompson Equestrian Partners / Junction Engineering
@@ -518,38 +514,3 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
-.row.no-open
-	.f-container
-		.row__terms.row__cell.medium
-		.row__labels-2.row__cell.no-open
-			i.label.attention__label.no-open
-				span.no-open
-					|DE
-				span.no-open
-					|18 - 5
-		.row__indicators.row__cell
-			span.row__indicator.decline
-				|4
-			span.row__indicator.choosen
-				|8
-			span.row__indicator.ready
-				|5
-			span.row__indicator.wait
-				|12
-			span.row__indicator.department
-				|3
-			span.row__indicator.busy
-				|2
-		.row__name-2.row__cell.no-open
-			p.row__fullname.no-open
-				|Gustav Schlüter Gmbh
-			i.tag.manager-tag.light-green-tag.no-open
-				|CK
-		.row__vacancies.row__cell
-			i.label.hot__label
-				|Сезонная
-			p
-				|Цветы
-		.row__notes.row__cell
-			p
-				|14.11.2019 - 15.04.2020 (6 мес)
