--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -49,6 +49,7 @@ block content
 			include pug/layouts/vacancy/row
 			include pug/layouts/vacancy/row
 			include pug/layouts/vacancy/row
+			include pug/layouts/vacancy/archive-row
 	//- include pug/layouts/vacancy/_popup
 	include pug/layouts/vacancy/_popup
 			//- include pug/layouts/header
