--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -18,7 +18,7 @@
 	
 }
 
-.row__indicators {
+.row__indicators, .row__archive {
 	flex-basis: 244/1720 * 100%;
 	
 }
@@ -187,7 +187,9 @@ p.status {
 }
 
 .table-full__row:first-child {
-	height: 53px;
+	height: auto;
+	border-bottom: unset;
+	padding-bottom: 2px;
 }
 
 .table-full__title {
@@ -201,6 +203,9 @@ p.status {
 
 .cell-names {
 	flex-basis: 244/1484 * 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items:center;	
 	
 }
 
