--- a/app/pug/layouts/vacancy/row.pug
+++ b/app/pug/layouts/vacancy/row.pug
@@ -42,7 +42,7 @@
 							|2
 					.table-full__cell.row__cell.cell-status
 						.cell-status__left
-							.cell-status__slider
+							.cell-status__slider(data-date="")
 								p.status.choosen
 									|Подготовка CV
 								p.status.choosen.active
@@ -89,7 +89,7 @@
 						|Лемешко Аліна
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen.active
@@ -130,7 +130,7 @@
 						|Романов Валентин
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen.active
@@ -171,7 +171,7 @@
 						|Тарасюк Віталій
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen.active
@@ -214,7 +214,7 @@
 						|Бичківська Алла
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen.active
@@ -261,7 +261,7 @@
 							|Червінський Йосип
 					.table-full__cell.row__cell.cell-status
 						.cell-status__left
-							.cell-status__slider
+							.cell-status__slider(data-date="")
 								p.status.choosen
 									|Подготовка CV
 								p.status.choosen
@@ -298,7 +298,7 @@
 						|Шащук Іван
 				.table-full__cell.row__cell.cell-status
 						.cell-status__left
-							.cell-status__slider
+							.cell-status__slider(data-date="")
 								p.status.choosen
 									|Подготовка CV
 								p.status.choosen
@@ -341,7 +341,7 @@
 						|Іванчик Олександр
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen
@@ -376,7 +376,7 @@
 						|Волтарніст Юлія
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen
@@ -411,7 +411,7 @@
 						|Ситнік Оксана
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen
@@ -450,7 +450,7 @@
 						|Коргун Максим
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen
@@ -489,7 +489,7 @@
 						|Конончук Віталій
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
-						.cell-status__slider
+						.cell-status__slider(data-date="")
 							p.status.choosen
 								|Подготовка CV
 							p.status.choosen
