--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -209,7 +209,7 @@
 					input(type="radio" id='vacancies-rbtn' name="sorting-rbtn")
 					label(for="vacancies-rbtn")
 						|По вакансиям
-		#type-feedback-popup.work-modal-popup
+		#type-feedback-popup
 			form
 				p
 					|Тип отзыва
