--- a/app/pug/layouts/vacancy/vacancy-popup/_vacancy-popup.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_vacancy-popup.pug
@@ -1,7 +1,7 @@
-#modal-1.modal.micromodal-slide(aria-hidden='true')
-	.modal__overlay(tabindex='-1' data-custom-close="modal-1")
-		.modal__wrapper.my-modal-wrapper(data-custom-close="modal-1")
-			.modal__container.work-modal.my-modal(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
+#modal-2.modal.micromodal-slide(aria-hidden='true')
+	.modal__overlay(tabindex='-1' data-custom-close="modal-2")
+		.modal__wrapper.my-modal-wrapper(data-custom-close="modal-2")
+			.modal__container.work-modal.my-modal(role='dialog' aria-modal='true' aria-labelledby='modal-2-title')
 				.sidebar
 					.sidebar__layout
 						.f-container
@@ -40,26 +40,26 @@
 							.sidebar__actions
 								ul.sidebar__action
 									li.sidebar__action-item
-										.input-group
-											input(type="checkbox" id="remove-sending-chbx")
-											label(for="remove-sending-chbx")
-												|Исключить из рассылки
 							.sidebar__menu
 								ul.sidebar__filter
 									li.sidebar__filter-item
 										.sidebar__filter-wrapper
 											p
-												|История анонсов
+												|Чек-лист
+									li.sidebar__filter-item
+										.sidebar__filter-wrapper
+											p
+												|Распечатать ПТ
 									
 									li.sidebar__filter-item
 										.sidebar__filter-wrapper
 											p
-												|Данные для документов
+												|Архивировать вакансию
 									
 									li.sidebar__filter-item
 										.sidebar__filter-wrapper
 											p
-												|Создать вакансию
+												|Создать копию вакансии
 										
 									li.sidebar__filter-item
 										.sidebar__filter-wrapper
@@ -68,103 +68,6 @@
 											span
 												|20.04.2019
 				.rows
-					.row.common-info.modal-row
-						.common-info__left
-							.common-info__company.info-block
-								p
-									|Предприятие
-								.input-group
-									textarea.info-area.common-info__manufactury-area(name="" rows="3")
-										|BoGrønt Solblomsten Gartneri og Hagesenter / Solblomsten A
-							.common-info__country.info-block
-								p
-									|Страна
-								.input-group
-									select.info-area.country-select(name="")
-							.common-info__address.info-block
-								p
-									|Адрес
-								.input-group
-									textarea.info-area(type="text" rows="2")
-										|Otterveien 1, 9300 Finnsnes, 9300 Finnsnes
-									.map
-										div(style='overflow:hidden;width: 100%;position: relative;')
-											iframe(width='100%' height='200' src='https://maps.google.com/maps?width=100%&height=200&hl=en&q=%D0%96%D0%B8%D1%82%D0%BE%D0%BC%D0%B8%D1%80+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&ie=UTF8&t=&z=11&iwloc=B&output=embed' frameborder='0' scrolling='no' marginheight='0' marginwidth='0')
-											div(style='position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;')
-												small(style='line-height: 1.8;font-size: 2px;background: #fff;')
-													| Powered by 
-													a(href='https://embedgooglemaps.com/ru/') embedgooglemaps RU
-													|	&amp; 
-													a(href='https://iamsterdamcard.it') i amsterdamcard it
-											style.
-												#gmap_canvas img{max-width:none!important;background:none!important}
-						.common-info__right
-							.common-info__contact-person.common-info__group
-								.common-info__contact-person_curr.common-info__group_small.info-block
-									p
-										|Контактное лицо
-									.input-group
-										input.info-area.common-info__contact-person-area(type="text" value="Gunnlaug Eide")
-								.common-info__contact-person_other.common-info__group_big.info-block
-									p
-										|Другие контактые лица
-									.input-group
-										input.info-area(type="text" value="BoGrønt Solblomsten, BoGrønt Solblomsten")
-							.common-info__contact-info.common-info__group
-								.common-info__contact-info_curr.common-info__group_small.info-block
-									p
-										|Контактная информация
-									.input-group.info-group-ico
-										i.ico
-											+svg2('phone')
-										input.info-area(type="text" value="+47 77847243")
-									.input-group.info-group-ico
-										i.ico
-											+svg2('mail')
-										input.info-area(type="text" value="solblomsten@bogront.no")
-								.common-info__contact-info_other.common-info__group_big.info-block
-									p
-										|Дополнительные контакты
-									.input-group
-										input.info-area(type="text" value="+47 77843366, +47 77843366, +47 77843366 ")
-									.input-group
-										input.info-area(type="text" value="post@solblomsten.no, post@solblomsten.no")
-							.common-info__social.info-block
-								p
-									|Сайт и социальные сети
-								.input-group.info-group-ico 
-									i.ico
-										+svg2('web')
-									input.info-area(type="text" value="www.bogront.no/solblomsten/indt.no/solblomsten/ind")
-								.input-group.info-group-ico 
-									i.ico
-										+svg2('facebook')
-									input.info-area(type="text" value="www.bogront.no/solblomsten/")
-								.input-group.info-group-ico 
-									i.ico
-										+svg2('instagram')
-									input.info-area(type="text" value="www.bogront.no/solblo")
-							.common-info__more-info.common-info__group
-								.common-info__more-info_inner-left
-									.common-info__more-info-about.info-block
-										p
-											|Дополнительная информация
-										.input-group
-											textarea.info-area(type="text" rows="6")
-												|BoGrønt Solblomsten Gartneri og Hagesenter / Solblomsten AS
-								.common-info__more-info_inner-right
-									.common-info__more-info-mediator.info-block
-										p
-											|Посредник
-										.input-group.native-select
-											select.info-area.mediator-select(name="")
-									.common-info__more-info-source.info-block
-										p
-											|Источник
-										.input-group.native-select
-											select.info-area.source-select(name="")
-					//- include _manufactury-type
-					//- include _contacts-history
-					//- include _vacancies-history
-					//- include _media
-					//- include _feedback
+					include _main-info
+					include _clients
+					include ../../work-popup/_feedback
