--- a/app/libscss/libs.less
+++ b/app/libscss/libs.less
@@ -4,4 +4,5 @@
 // @import url('../../node_modules/choices.js/public/assets/styles/base.css');
 @import url('../../node_modules/choices.js/public/assets/styles/base.css');
 @import url('../../node_modules/choices.js/public/assets/styles/choices.css');
+@import url('../../node_modules/@trevoreyre/autocomplete-js/dist/style.css');
 // @import url('../../node_modules/chart.js/dist/Chart.css');
