--- a/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
@@ -7,7 +7,7 @@
 			.choose-product-type
 				p.country-vacancy
 					|NO 293
-				p
+				p.type-product
 					|Выберете тип продукции
 			.full-info
 				p.country-vacancy
@@ -16,7 +16,7 @@
 					span.visa-type
 						|Сезонная - 
 					span.types
-						|Цветы, Теплицы, Молочные коровы, Мясные коровы
+						| Цветы, Теплицы, Молочные коровы, Мясные коровы
 		.main-info__layer_left
 			.main-info__country
 				p
@@ -41,7 +41,7 @@
 				p
 					|Цена вакансии
 				span
-					|500 евро
+					|не достаточно данных
 			.main-info__dates
 				p
 					|Даты
