--- a/app/less/main.less
+++ b/app/less/main.less
@@ -706,6 +706,18 @@ i.label {
 }
 
 
+////////Animations/////
+
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  } to {
+    transform: rotate(360deg);
+  }
+}
+
+
 //|||||||||||||||||||COMMON ELEMENTS END|||||||||||||||||||//
 
 //////////////////////////
