--- a/app/less/vacancy/_main-info.less
+++ b/app/less/vacancy/_main-info.less
@@ -45,19 +45,23 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 2;
+	width: 100%;
 	p {
 		margin-bottom: 0;
 	}
 
 	.choose-employer {
-		width: 100%;
-		background: @main-color;
-		padding: 3px 9px;
-		border-radius: 20px;
-		cursor: pointer;
+			justify-content: center;
+			display: flex;
 		
 		
 		p {
+			// width: 100%;
+			background: @main-color;
+			padding: 3px 9px;
+			display: inline-block;
+			border-radius: 20px;
+			cursor: pointer;
 			color: @white;
 			font-size: 1rem;
 			font-weight: 500;
@@ -65,6 +69,77 @@
 	}
 	.choose-product-type, .full-info {
 		display: none;
+	}
+
+	.choose-product-type {
+		// display: flex;
+		justify-content: center;
+		p {
+			color: @white;
+			font-size: 1rem;
+			font-weight: 500;
+		}
+	
+		.country-vacancy {
+			background: @orange;
+			padding: 3px 8px;
+			border-top-left-radius: 20px;
+			border-bottom-left-radius: 20px;
+		}
+
+		.type-product {
+			background: @main-color;
+			padding: 3px 8px;
+			border-top-right-radius: 20px;
+			border-bottom-right-radius: 20px;
+			cursor: pointer;
+		}
+	}
+
+	.full-info {
+		// display: flex;
+		justify-content: center;
+		p {
+			color: @white;
+			font-size: 1rem;
+			font-weight: 500;
+		}
+		.country-vacancy {
+			background: @orange;
+			padding: 3px 8px;
+			border-top-left-radius: 20px;
+			border-bottom-left-radius: 20px;
+		}
+
+		.products {
+			padding: 3px 8px;
+			display: flex;
+			align-items: center;
+			max-width: 80%;
+			border-top-right-radius: 20px;
+			border-bottom-right-radius: 20px;
+			&.season {
+				background: @hot;
+			}
+
+			&.practics {
+				background: @grass-green;
+			}
+
+			&.working {
+				background: @blue;
+			}
+		}
+
+		.visa-type {
+			white-space: nowrap;
+		}
+
+		.types {
+			text-overflow: ellipsis;
+	    overflow-x: hidden;
+	    white-space: nowrap;
+		}
 	}
 }
 
@@ -109,3 +184,5 @@
 		margin-bottom: 2px;
 	}
 }
+
+
